--- a/assignment3/LSTM_Captioning.ipynb
+++ b/assignment3/LSTM_Captioning.ipynb
@@ -751,6 +751,7 @@
     "        wds.append(wd)\n",
     "        print(hd, wd, lr)\n",
     "        np.random.seed(231)        \n",
+    "\n",
     "        med_lstm_model = CaptioningRNN(\n",
     "              cell_type='lstm',\n",
     "              word_to_idx=data['word_to_idx'],\n",
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -859,298 +860,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 2790) loss: 78.725462\n",
-      "(Iteration 11 / 2790) loss: 75.033567\n",
-      "(Iteration 21 / 2790) loss: 80.378140\n",
-      "(Iteration 31 / 2790) loss: 74.425339\n",
-      "(Iteration 41 / 2790) loss: 70.899651\n",
-      "(Iteration 51 / 2790) loss: 62.156494\n",
-      "(Iteration 61 / 2790) loss: 57.626779\n",
-      "(Iteration 71 / 2790) loss: 53.448817\n",
-      "(Iteration 81 / 2790) loss: 56.175038\n",
-      "(Iteration 91 / 2790) loss: 52.901655\n",
-      "(Iteration 101 / 2790) loss: 49.687530\n",
-      "(Iteration 111 / 2790) loss: 53.435714\n",
-      "(Iteration 121 / 2790) loss: 50.479814\n",
-      "(Iteration 131 / 2790) loss: 50.305640\n",
-      "(Iteration 141 / 2790) loss: 48.921142\n",
-      "(Iteration 151 / 2790) loss: 50.441630\n",
-      "(Iteration 161 / 2790) loss: 50.987821\n",
-      "(Iteration 171 / 2790) loss: 51.026455\n",
-      "(Iteration 181 / 2790) loss: 47.447088\n",
-      "(Iteration 191 / 2790) loss: 48.765111\n",
-      "(Iteration 201 / 2790) loss: 46.986915\n",
-      "(Iteration 211 / 2790) loss: 46.467838\n",
-      "(Iteration 221 / 2790) loss: 48.339393\n",
-      "(Iteration 231 / 2790) loss: 46.031060\n",
-      "(Iteration 241 / 2790) loss: 45.977367\n",
-      "(Iteration 251 / 2790) loss: 44.361858\n",
-      "(Iteration 261 / 2790) loss: 41.315128\n",
-      "(Iteration 271 / 2790) loss: 48.448877\n",
-      "(Iteration 281 / 2790) loss: 45.025824\n",
-      "(Iteration 291 / 2790) loss: 43.951076\n",
-      "(Iteration 301 / 2790) loss: 45.298637\n",
-      "(Iteration 311 / 2790) loss: 43.772305\n",
-      "(Iteration 321 / 2790) loss: 41.658020\n",
-      "(Iteration 331 / 2790) loss: 41.915753\n",
-      "(Iteration 341 / 2790) loss: 42.945265\n",
-      "(Iteration 351 / 2790) loss: 41.242062\n",
-      "(Iteration 361 / 2790) loss: 43.258425\n",
-      "(Iteration 371 / 2790) loss: 44.765025\n",
-      "(Iteration 381 / 2790) loss: 42.408742\n",
-      "(Iteration 391 / 2790) loss: 40.618072\n",
-      "(Iteration 401 / 2790) loss: 38.774203\n",
-      "(Iteration 411 / 2790) loss: 41.601909\n",
-      "(Iteration 421 / 2790) loss: 40.706932\n",
-      "(Iteration 431 / 2790) loss: 42.640370\n",
-      "(Iteration 441 / 2790) loss: 39.157667\n",
-      "(Iteration 451 / 2790) loss: 39.184010\n",
-      "(Iteration 461 / 2790) loss: 37.354215\n",
-      "(Iteration 471 / 2790) loss: 37.046639\n",
-      "(Iteration 481 / 2790) loss: 39.902142\n",
-      "(Iteration 491 / 2790) loss: 41.907685\n",
-      "(Iteration 501 / 2790) loss: 34.074739\n",
-      "(Iteration 511 / 2790) loss: 39.369396\n",
-      "(Iteration 521 / 2790) loss: 38.820118\n",
-      "(Iteration 531 / 2790) loss: 37.688634\n",
-      "(Iteration 541 / 2790) loss: 37.587719\n",
-      "(Iteration 551 / 2790) loss: 37.869334\n",
-      "(Iteration 561 / 2790) loss: 37.411575\n",
-      "(Iteration 571 / 2790) loss: 35.440945\n",
-      "(Iteration 581 / 2790) loss: 35.916266\n",
-      "(Iteration 591 / 2790) loss: 37.631380\n",
-      "(Iteration 601 / 2790) loss: 35.165227\n",
-      "(Iteration 611 / 2790) loss: 38.107221\n",
-      "(Iteration 621 / 2790) loss: 39.608759\n",
-      "(Iteration 631 / 2790) loss: 35.880958\n",
-      "(Iteration 641 / 2790) loss: 33.055025\n",
-      "(Iteration 651 / 2790) loss: 34.081018\n",
-      "(Iteration 661 / 2790) loss: 35.271792\n",
-      "(Iteration 671 / 2790) loss: 35.514470\n",
-      "(Iteration 681 / 2790) loss: 34.418134\n",
-      "(Iteration 691 / 2790) loss: 34.232917\n",
-      "(Iteration 701 / 2790) loss: 32.140384\n",
-      "(Iteration 711 / 2790) loss: 34.007728\n",
-      "(Iteration 721 / 2790) loss: 35.728286\n",
-      "(Iteration 731 / 2790) loss: 31.139440\n",
-      "(Iteration 741 / 2790) loss: 33.821900\n",
-      "(Iteration 751 / 2790) loss: 30.648375\n",
-      "(Iteration 761 / 2790) loss: 35.809627\n",
-      "(Iteration 771 / 2790) loss: 32.448510\n",
-      "(Iteration 781 / 2790) loss: 32.920303\n",
-      "(Iteration 791 / 2790) loss: 31.775446\n",
-      "(Iteration 801 / 2790) loss: 31.419710\n",
-      "(Iteration 811 / 2790) loss: 33.352833\n",
-      "(Iteration 821 / 2790) loss: 33.533683\n",
-      "(Iteration 831 / 2790) loss: 33.763756\n",
-      "(Iteration 841 / 2790) loss: 32.889924\n",
-      "(Iteration 851 / 2790) loss: 33.867356\n",
-      "(Iteration 861 / 2790) loss: 31.699494\n",
-      "(Iteration 871 / 2790) loss: 31.693802\n",
-      "(Iteration 881 / 2790) loss: 31.689206\n",
-      "(Iteration 891 / 2790) loss: 30.869747\n",
-      "(Iteration 901 / 2790) loss: 30.721692\n",
-      "(Iteration 911 / 2790) loss: 33.294450\n",
-      "(Iteration 921 / 2790) loss: 31.988320\n",
-      "(Iteration 931 / 2790) loss: 31.540378\n",
-      "(Iteration 941 / 2790) loss: 30.149647\n",
-      "(Iteration 951 / 2790) loss: 31.909910\n",
-      "(Iteration 961 / 2790) loss: 33.064655\n",
-      "(Iteration 971 / 2790) loss: 32.006576\n",
-      "(Iteration 981 / 2790) loss: 31.434672\n",
-      "(Iteration 991 / 2790) loss: 33.209167\n",
-      "(Iteration 1001 / 2790) loss: 29.734292\n",
-      "(Iteration 1011 / 2790) loss: 30.556173\n",
-      "(Iteration 1021 / 2790) loss: 29.568752\n",
-      "(Iteration 1031 / 2790) loss: 30.465809\n",
-      "(Iteration 1041 / 2790) loss: 33.307570\n",
-      "(Iteration 1051 / 2790) loss: 29.976241\n",
-      "(Iteration 1061 / 2790) loss: 28.317113\n",
-      "(Iteration 1071 / 2790) loss: 31.657121\n",
-      "(Iteration 1081 / 2790) loss: 31.513232\n",
-      "(Iteration 1091 / 2790) loss: 29.247839\n",
-      "(Iteration 1101 / 2790) loss: 29.349569\n",
-      "(Iteration 1111 / 2790) loss: 28.515839\n",
-      "(Iteration 1121 / 2790) loss: 29.525874\n",
-      "(Iteration 1131 / 2790) loss: 28.107974\n",
-      "(Iteration 1141 / 2790) loss: 25.062754\n",
-      "(Iteration 1151 / 2790) loss: 28.865936\n",
-      "(Iteration 1161 / 2790) loss: 29.066032\n",
-      "(Iteration 1171 / 2790) loss: 26.074216\n",
-      "(Iteration 1181 / 2790) loss: 27.842812\n",
-      "(Iteration 1191 / 2790) loss: 27.287814\n",
-      "(Iteration 1201 / 2790) loss: 26.898924\n",
-      "(Iteration 1211 / 2790) loss: 29.298076\n",
-      "(Iteration 1221 / 2790) loss: 26.771091\n",
-      "(Iteration 1231 / 2790) loss: 28.703651\n",
-      "(Iteration 1241 / 2790) loss: 28.248305\n",
-      "(Iteration 1251 / 2790) loss: 27.205438\n",
-      "(Iteration 1261 / 2790) loss: 28.241247\n",
-      "(Iteration 1271 / 2790) loss: 28.931944\n",
-      "(Iteration 1281 / 2790) loss: 29.163994\n",
-      "(Iteration 1291 / 2790) loss: 28.800897\n",
-      "(Iteration 1301 / 2790) loss: 26.945922\n",
-      "(Iteration 1311 / 2790) loss: 27.041827\n",
-      "(Iteration 1321 / 2790) loss: 26.866677\n",
-      "(Iteration 1331 / 2790) loss: 28.065730\n",
-      "(Iteration 1341 / 2790) loss: 25.695816\n",
-      "(Iteration 1351 / 2790) loss: 26.505763\n",
-      "(Iteration 1361 / 2790) loss: 25.498515\n",
-      "(Iteration 1371 / 2790) loss: 23.912264\n",
-      "(Iteration 1381 / 2790) loss: 25.924535\n",
-      "(Iteration 1391 / 2790) loss: 26.565373\n",
-      "(Iteration 1401 / 2790) loss: 24.630556\n",
-      "(Iteration 1411 / 2790) loss: 24.233729\n",
-      "(Iteration 1421 / 2790) loss: 25.639246\n",
-      "(Iteration 1431 / 2790) loss: 29.435390\n",
-      "(Iteration 1441 / 2790) loss: 23.600808\n",
-      "(Iteration 1451 / 2790) loss: 24.663192\n",
-      "(Iteration 1461 / 2790) loss: 24.795183\n",
-      "(Iteration 1471 / 2790) loss: 26.235872\n",
-      "(Iteration 1481 / 2790) loss: 25.730065\n",
-      "(Iteration 1491 / 2790) loss: 24.361337\n",
-      "(Iteration 1501 / 2790) loss: 23.845786\n",
-      "(Iteration 1511 / 2790) loss: 25.036733\n",
-      "(Iteration 1521 / 2790) loss: 23.841865\n",
-      "(Iteration 1531 / 2790) loss: 22.768448\n",
-      "(Iteration 1541 / 2790) loss: 25.228269\n",
-      "(Iteration 1551 / 2790) loss: 24.741471\n",
-      "(Iteration 1561 / 2790) loss: 22.854480\n",
-      "(Iteration 1571 / 2790) loss: 25.433254\n",
-      "(Iteration 1581 / 2790) loss: 23.281138\n",
-      "(Iteration 1591 / 2790) loss: 23.846574\n",
-      "(Iteration 1601 / 2790) loss: 24.006899\n",
-      "(Iteration 1611 / 2790) loss: 24.581548\n",
-      "(Iteration 1621 / 2790) loss: 23.816641\n",
-      "(Iteration 1631 / 2790) loss: 19.749155\n",
-      "(Iteration 1641 / 2790) loss: 23.523644\n",
-      "(Iteration 1651 / 2790) loss: 23.505797\n",
-      "(Iteration 1661 / 2790) loss: 21.732757\n",
-      "(Iteration 1671 / 2790) loss: 23.208510\n",
-      "(Iteration 1681 / 2790) loss: 21.741809\n",
-      "(Iteration 1691 / 2790) loss: 22.218372\n",
-      "(Iteration 1701 / 2790) loss: 21.696276\n",
-      "(Iteration 1711 / 2790) loss: 21.073814\n",
-      "(Iteration 1721 / 2790) loss: 24.458454\n",
-      "(Iteration 1731 / 2790) loss: 21.788801\n",
-      "(Iteration 1741 / 2790) loss: 21.329024\n",
-      "(Iteration 1751 / 2790) loss: 20.788919\n",
-      "(Iteration 1761 / 2790) loss: 21.030618\n",
-      "(Iteration 1771 / 2790) loss: 20.403261\n",
-      "(Iteration 1781 / 2790) loss: 19.980491\n",
-      "(Iteration 1791 / 2790) loss: 20.463030\n",
-      "(Iteration 1801 / 2790) loss: 20.904564\n",
-      "(Iteration 1811 / 2790) loss: 21.265409\n",
-      "(Iteration 1821 / 2790) loss: 23.487233\n",
-      "(Iteration 1831 / 2790) loss: 21.099642\n",
-      "(Iteration 1841 / 2790) loss: 21.982295\n",
-      "(Iteration 1851 / 2790) loss: 22.428565\n",
-      "(Iteration 1861 / 2790) loss: 21.816912\n",
-      "(Iteration 1871 / 2790) loss: 23.408196\n",
-      "(Iteration 1881 / 2790) loss: 19.746733\n",
-      "(Iteration 1891 / 2790) loss: 21.783125\n",
-      "(Iteration 1901 / 2790) loss: 20.047664\n",
-      "(Iteration 1911 / 2790) loss: 20.506715\n",
-      "(Iteration 1921 / 2790) loss: 23.187727\n",
-      "(Iteration 1931 / 2790) loss: 21.299134\n",
-      "(Iteration 1941 / 2790) loss: 21.964921\n",
-      "(Iteration 1951 / 2790) loss: 19.476405\n",
-      "(Iteration 1961 / 2790) loss: 18.956962\n",
-      "(Iteration 1971 / 2790) loss: 20.894580\n",
-      "(Iteration 1981 / 2790) loss: 18.716438\n",
-      "(Iteration 1991 / 2790) loss: 18.681866\n",
-      "(Iteration 2001 / 2790) loss: 21.428832\n",
-      "(Iteration 2011 / 2790) loss: 17.877124\n",
-      "(Iteration 2021 / 2790) loss: 22.190883\n",
-      "(Iteration 2031 / 2790) loss: 21.145424\n",
-      "(Iteration 2041 / 2790) loss: 19.824599\n",
-      "(Iteration 2051 / 2790) loss: 20.088109\n",
-      "(Iteration 2061 / 2790) loss: 19.599189\n",
-      "(Iteration 2071 / 2790) loss: 20.459199\n",
-      "(Iteration 2081 / 2790) loss: 18.661965\n",
-      "(Iteration 2091 / 2790) loss: 18.579238\n",
-      "(Iteration 2101 / 2790) loss: 17.985685\n",
-      "(Iteration 2111 / 2790) loss: 19.266607\n",
-      "(Iteration 2121 / 2790) loss: 18.382897\n",
-      "(Iteration 2131 / 2790) loss: 21.047285\n",
-      "(Iteration 2141 / 2790) loss: 20.717225\n",
-      "(Iteration 2151 / 2790) loss: 19.237721\n",
-      "(Iteration 2161 / 2790) loss: 18.392577\n",
-      "(Iteration 2171 / 2790) loss: 20.194436\n",
-      "(Iteration 2181 / 2790) loss: 18.191417\n",
-      "(Iteration 2191 / 2790) loss: 18.022948\n",
-      "(Iteration 2201 / 2790) loss: 17.620683\n",
-      "(Iteration 2211 / 2790) loss: 17.782065\n",
-      "(Iteration 2221 / 2790) loss: 19.839808\n",
-      "(Iteration 2231 / 2790) loss: 17.958183\n",
-      "(Iteration 2241 / 2790) loss: 18.060974\n",
-      "(Iteration 2251 / 2790) loss: 17.230106\n",
-      "(Iteration 2261 / 2790) loss: 18.595405\n",
-      "(Iteration 2271 / 2790) loss: 16.071262\n",
-      "(Iteration 2281 / 2790) loss: 19.174553\n",
-      "(Iteration 2291 / 2790) loss: 19.123282\n",
-      "(Iteration 2301 / 2790) loss: 18.295495\n",
-      "(Iteration 2311 / 2790) loss: 19.590152\n",
-      "(Iteration 2321 / 2790) loss: 17.924369\n",
-      "(Iteration 2331 / 2790) loss: 17.253611\n",
-      "(Iteration 2341 / 2790) loss: 15.242874\n",
-      "(Iteration 2351 / 2790) loss: 16.817853\n",
-      "(Iteration 2361 / 2790) loss: 17.023241\n",
-      "(Iteration 2371 / 2790) loss: 14.985499\n",
-      "(Iteration 2381 / 2790) loss: 14.322667\n",
-      "(Iteration 2391 / 2790) loss: 17.704532\n",
-      "(Iteration 2401 / 2790) loss: 17.578429\n",
-      "(Iteration 2411 / 2790) loss: 15.523765\n",
-      "(Iteration 2421 / 2790) loss: 18.362891\n",
-      "(Iteration 2431 / 2790) loss: 17.390608\n",
-      "(Iteration 2441 / 2790) loss: 17.626487\n",
-      "(Iteration 2451 / 2790) loss: 17.959260\n",
-      "(Iteration 2461 / 2790) loss: 15.161593\n",
-      "(Iteration 2471 / 2790) loss: 16.558062\n",
-      "(Iteration 2481 / 2790) loss: 15.932050\n",
-      "(Iteration 2491 / 2790) loss: 20.242874\n",
-      "(Iteration 2501 / 2790) loss: 18.082237\n",
-      "(Iteration 2511 / 2790) loss: 15.801276\n",
-      "(Iteration 2521 / 2790) loss: 15.413638\n",
-      "(Iteration 2531 / 2790) loss: 15.228614\n",
-      "(Iteration 2541 / 2790) loss: 17.511867\n",
-      "(Iteration 2551 / 2790) loss: 14.587384\n",
-      "(Iteration 2561 / 2790) loss: 13.000969\n",
-      "(Iteration 2571 / 2790) loss: 18.096755\n",
-      "(Iteration 2581 / 2790) loss: 17.363867\n",
-      "(Iteration 2591 / 2790) loss: 15.721225\n",
-      "(Iteration 2601 / 2790) loss: 15.325007\n",
-      "(Iteration 2611 / 2790) loss: 16.009913\n",
-      "(Iteration 2621 / 2790) loss: 14.336810\n",
-      "(Iteration 2631 / 2790) loss: 17.025063\n",
-      "(Iteration 2641 / 2790) loss: 15.048822\n",
-      "(Iteration 2651 / 2790) loss: 15.016802\n",
-      "(Iteration 2661 / 2790) loss: 13.224953\n",
-      "(Iteration 2671 / 2790) loss: 17.047819\n",
-      "(Iteration 2681 / 2790) loss: 15.053169\n",
-      "(Iteration 2691 / 2790) loss: 16.391129\n",
-      "(Iteration 2701 / 2790) loss: 14.229989\n",
-      "(Iteration 2711 / 2790) loss: 16.033221\n",
-      "(Iteration 2721 / 2790) loss: 14.604834\n",
-      "(Iteration 2731 / 2790) loss: 15.577508\n",
-      "(Iteration 2741 / 2790) loss: 14.705746\n",
-      "(Iteration 2751 / 2790) loss: 14.189111\n",
-      "(Iteration 2761 / 2790) loss: 16.195940\n",
-      "(Iteration 2771 / 2790) loss: 13.893907\n",
-      "(Iteration 2781 / 2790) loss: 13.749357\n",
-      "Average BLEU score for val: 0.251586\n",
-      "Average BLEU score for train: 0.530093\n"
+      "(Iteration 1 / 4650) loss: 77.449243\n",
+      "(Iteration 11 / 4650) loss: 74.996030\n",
+      "(Iteration 21 / 4650) loss: 78.109374\n",
+      "(Iteration 31 / 4650) loss: 76.334388\n",
+      "(Iteration 41 / 4650) loss: 74.183551\n",
+      "(Iteration 51 / 4650) loss: 59.949306\n",
+      "(Iteration 61 / 4650) loss: 59.885437\n",
+      "(Iteration 71 / 4650) loss: 55.644226\n",
+      "(Iteration 81 / 4650) loss: 54.038773\n",
+      "(Iteration 91 / 4650) loss: 53.873836\n",
+      "(Iteration 101 / 4650) loss: 57.060761\n",
+      "(Iteration 111 / 4650) loss: 53.133531\n",
+      "(Iteration 121 / 4650) loss: 51.549849\n",
+      "(Iteration 131 / 4650) loss: 51.559199\n",
+      "(Iteration 141 / 4650) loss: 51.565679\n",
+      "(Iteration 151 / 4650) loss: 51.271730\n",
+      "(Iteration 161 / 4650) loss: 49.309994\n",
+      "(Iteration 171 / 4650) loss: 50.107877\n",
+      "(Iteration 181 / 4650) loss: 48.440996\n",
+      "(Iteration 191 / 4650) loss: 47.869596"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.5300929497921574, 0.25158550063850393)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1158,9 +888,9 @@
     "\n",
     "med_data = load_coco_data(max_train=3000)\n",
     "    \n",
-    "hd = 228\n",
+    "hd = 256\n",
     "lr = 5e-4\n",
-    "wd = 228\n",
+    "wd = 128\n",
     "med_lstm_model = CaptioningRNN(\n",
     "      cell_type='lstm',\n",
     "      word_to_idx=data['word_to_idx'],\n",
@@ -1172,7 +902,7 @@
     "\n",
     "med_lstm_solver = CaptioningSolver(med_lstm_model, med_data,\n",
     "           update_rule='adam',\n",
-    "           num_epochs=30,\n",
+    "           num_epochs=50,\n",
     "           batch_size=32,\n",
     "           optim_config={\n",
     "             'learning_rate': lr,\n",
