--- a/assignment3/LSTM_Captioning.ipynb
+++ b/assignment3/LSTM_Captioning.ipynb
@@ -13,13 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "from __future__ import print_function\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,15 +83,15 @@
      "output_type": "stream",
      "text": [
       "word_to_idx <class 'dict'> 1004\n",
-      "val_image_idxs <class 'numpy.ndarray'> (195954,) int32\n",
-      "train_captions <class 'numpy.ndarray'> (400135, 17) int32\n",
-      "train_image_idxs <class 'numpy.ndarray'> (400135,) int32\n",
-      "train_urls <class 'numpy.ndarray'> (82783,) <U63\n",
-      "idx_to_word <class 'list'> 1004\n",
       "val_captions <class 'numpy.ndarray'> (195954, 17) int32\n",
+      "train_urls <class 'numpy.ndarray'> (82783,) <U63\n",
       "val_urls <class 'numpy.ndarray'> (40504,) <U63\n",
       "val_features <class 'numpy.ndarray'> (40504, 512) float32\n",
-      "train_features <class 'numpy.ndarray'> (82783, 512) float32\n"
+      "idx_to_word <class 'list'> 1004\n",
+      "train_features <class 'numpy.ndarray'> (82783, 512) float32\n",
+      "train_image_idxs <class 'numpy.ndarray'> (400135,) int32\n",
+      "val_image_idxs <class 'numpy.ndarray'> (195954,) int32\n",
+      "train_captions <class 'numpy.ndarray'> (400135, 17) int32\n"
      ]
     }
    ],
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -340,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -635,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -948,29 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2.6989700043360187"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log10(2e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -979,24 +966,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 690) loss: 77.923798\n",
-      "(Iteration 101 / 690) loss: 42.445987\n",
-      "(Iteration 201 / 690) loss: 33.614412\n",
-      "(Iteration 301 / 690) loss: 28.182511\n",
-      "(Iteration 401 / 690) loss: 22.606422\n",
-      "(Iteration 501 / 690) loss: 20.660726\n",
-      "(Iteration 601 / 690) loss: 18.073636\n",
-      "Average BLEU score for val: 0.250186\n",
-      "Average BLEU score for train: 0.488103\n"
+      "(Iteration 1 / 1170) loss: 78.310717\n",
+      "(Iteration 101 / 1170) loss: 45.170497\n",
+      "(Iteration 201 / 1170) loss: 36.871813\n",
+      "(Iteration 301 / 1170) loss: 34.444131\n",
+      "(Iteration 401 / 1170) loss: 30.927326\n",
+      "(Iteration 501 / 1170) loss: 28.187712\n",
+      "(Iteration 601 / 1170) loss: 24.242996\n",
+      "(Iteration 701 / 1170) loss: 22.792887\n",
+      "(Iteration 801 / 1170) loss: 21.565449\n",
+      "(Iteration 901 / 1170) loss: 20.182416\n",
+      "(Iteration 1001 / 1170) loss: 18.207487\n",
+      "(Iteration 1101 / 1170) loss: 15.818126\n",
+      "Average BLEU score for val: 0.260450\n",
+      "Average BLEU score for train: 0.497088\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.4881029669729135, 0.2501864527473638)"
+       "(0.497087793964745, 0.26044979171048416)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,8 +999,8 @@
     "med_data = load_coco_data(max_train=5000)\n",
     "    \n",
     "hd = 256\n",
-    "lr = 10 ** (-2.8)\n",
-    "wd = 256\n",
+    "lr = 1e-3\n",
+    "wd = 128\n",
     "med_lstm_model = CaptioningRNN(\n",
     "      cell_type='lstm',\n",
     "      word_to_idx=data['word_to_idx'],\n",
